tests/invalid/duplicate_symbols.ri
fn main() {
    let x = 1;
    let x = 1; // FAIL

    let y = 2;
    {
        let y = 5; // disallow variable shadowing
    }
}

fn other(a: i32) {
    let a = 1;
}

fn other(a: i32) { // FAIL
    let a = 1;
}

class RuntimeError : Error { }
class RuntimeError : Error { } // FAIL

struct Gota { }
struct Gota { } // FAIL

mod module {
    struct App { }
    struct App { } // FAIL
}

enum State {
    Idle,
    Idle // FAIL
}

// OK, extend `module` mod
mod module {
    struct Game {
        art: bool;
        art: bool; // FAIL
    }
}
